Turned on verbose again
I have mistakenly turned off verbose while removing boot-args after sound patch. Turned it back on again.

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1084,7 +1084,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string></string>
+				<string>-v debug=0x100 keepsyms=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
