Boot debugging bootargs removed.
In a hope to reduce boot times. Currently boot time is over 2 minutes.

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1401,7 +1401,7 @@
 			<key>PickerMode</key>
 			<string>External</string>
 			<key>PickerVariant</key>
-			<string>Modern</string>
+			<string>Auto</string>
 			<key>PollAppleHotKeys</key>
 			<false/>
 			<key>ShowPicker</key>
@@ -1523,7 +1523,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>debug=0x100 keepsyms=1 swd_panic=1</string>
+				<string></string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
@@ -1819,3 +1819,4 @@
 	</dict>
 </dict>
 </plist>
+  
