Remove VoodooI2CHID and add VoodooI2CElan

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1086,13 +1086,13 @@
 			</dict>
 			<dict>
 				<key>BundlePath</key>
-				<string>VoodooI2CHID.kext</string>
+				<string>VoodooI2CELAN.kext</string>
 				<key>Comment</key>
 				<string></string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
-				<string>Contents/MacOS/VoodooI2CHID</string>
+				<string>Contents/MacOS/VoodooI2CELAN</string>
 				<key>Arch</key>
 				<string>Any</string>
 				<key>MaxKernel</key>
