Removed serial number

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1670,7 +1670,7 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro16,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02Z9HY9MD6N</string>
+			<string></string>
 			<key>SystemUUID</key>
 			<string>C7F35386-3F76-4289-90DE-2E83978A1E69</string>
 		</dict>
