Reverted changes on SMCBatteryManager
Deactivating SMCBatteryManager makes battery management null in macOS. Could not see battery indicator. Reverted setting from "False" to "True".

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -748,7 +748,7 @@
 				<key>MaxKernel</key>
 				<string></string>
 				<key>Enabled</key>
-				<false/>
+				<true/>
 				<key>PlistPath</key>
 				<string>Contents/Info.plist</string>
 				<key>MinKernel</key>
